<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tables_view"
        android:title="Quadrants" />
    <item
        android:id="@+id/user_view"
        android:title="Online User" />
    <item
        android:id="@+id/settings"
        android:title="Settings" />
    <item
        android:id="@+id/meal_plan"
        android:title="MealPlan" />
</menu>
