...
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.StartView">

    <EditText
        android:id="@+id/editDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_label"
        android:importantForAutofill="no"
        android:inputType="text"
...
